--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "hapi-oauth2orize",
   "description": "Wrapper around OAuth2Orize for Hapi",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "main": "index",
   "dependencies": {
     "oauth2orize": "~1.0.1"
   },
   "peerDependencies": {
-    "hapi": "2.x.x"
+    "hapi": ">=2.x.x"
   }
 }
