--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.7",
   "main": "index",
   "dependencies": {
-    "oauth2orize": "~1.0.1"
+    "oauth2orize": "~1.0.1",
+    "hoek": "^2.4.x"
   },
   "peerDependencies": {
     "hapi": ">=2.x.x"
