--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hapi-oauth2orize",
-  "description": "Wrapper around OAuth2Orize for Hapi",
+  "description": "Wrapper around OAuth2orize for Hapi",
   "version": "1.1.0",
   "main": "index",
   "dependencies": {
