--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "description": "Wrapper around OAuth2orize for Hapi",
   "version": "1.2.1",
   "main": "index",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/blinkmobile/hapi-oauth2orize.git"
+  },
   "dependencies": {
     "oauth2orize": "~1.0.1",
     "hoek": "^2.4.x"
